Added confluence and wiki to bookmarks

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -14,6 +14,8 @@
     <a href="https://jenkins.qra">jenkins</a>
     <a href="https://git.qra">git</a>
     <a href="https://www.pivotaltracker.com/n/projects/887314">pivotal</a>
+    <a href="https://docs.qra">Confluence</a>
+    <a href="https://wiki.qra">Wiki</a>
 </li>
 <!--
 <li>AIO:
